Работают аннотации спринга